chore: pin major version of GraphiQL

--- a/packages/backend-modules/base/express/graphiql/index.html
+++ b/packages/backend-modules/base/express/graphiql/index.html
@@ -43,13 +43,16 @@
       copy them directly into your environment, or perhaps include them in your
       favored resource bundler.
      -->
-    <link rel="stylesheet" href="https://unpkg.com/graphiql/graphiql.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/graphiql@3/graphiql.min.css"
+    />
   </head>
 
   <body>
     <div id="graphiql">Loading...</div>
     <script
-      src="https://unpkg.com/graphiql/graphiql.min.js"
+      src="https://unpkg.com/graphiql@3/graphiql.min.js"
       type="application/javascript"
     ></script>
     <script>
