--- a/packages/backend-modules/base/express/graphiql/index.html
+++ b/packages/backend-modules/base/express/graphiql/index.html
@@ -7,65 +7,88 @@
 -->
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>GraphiQL</title>
-    <style>
-      body {
-        height: 100%;
-        margin: 0;
-        width: 100%;
-        overflow: hidden;
-      }
 
-      #graphiql {
-        height: 100vh;
-      }
-    </style>
+<head>
+  <title>GraphiQL</title>
+  <style>
+    body {
+      height: 100%;
+      margin: 0;
+      width: 100%;
+      overflow: hidden;
+    }
 
-    <!--
+    #graphiql {
+      height: 100vh;
+    }
+  </style>
+
+  <!--
       This GraphiQL example depends on Promise and fetch, which are available in
       modern browsers, but can be "polyfilled" for older browsers.
       GraphiQL itself depends on React DOM.
       If you do not want to rely on a CDN, you can host these files locally or
       include them directly in your favored resource bundler.
     -->
-    <script
-      crossorigin
-      src="https://unpkg.com/react@18/umd/react.development.js"
-    ></script>
-    <script
-      crossorigin
-      src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
-    ></script>
+  <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+  <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
 
-    <!--
+  <!--
       These two files can be found in the npm module, however you may wish to
       copy them directly into your environment, or perhaps include them in your
       favored resource bundler.
      -->
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/graphiql@3/graphiql.min.css"
-    />
-  </head>
+  <link rel="stylesheet" href="https://unpkg.com/graphiql@3/graphiql.min.css" />
+</head>
 
-  <body>
-    <div id="graphiql">Loading...</div>
-    <script
-      src="https://unpkg.com/graphiql@3/graphiql.min.js"
-      type="application/javascript"
-    ></script>
-    <script>
-      const root = ReactDOM.createRoot(document.getElementById('graphiql'))
-      root.render(
-        React.createElement(GraphiQL, {
-          fetcher: GraphiQL.createFetcher({
-            url: '/graphql',
-          }),
-          defaultEditorToolsVisibility: true,
-          defaultQuery: '{ me { id email } }',
+<body>
+  <div id="graphiql">Loading...</div>
+  <script src="https://unpkg.com/graphiql@3/graphiql.min.js" type="application/javascript"></script>
+  <script>
+
+    function getQueryFromURL() {
+      const url = new URL(window.location.href);
+      const query = url.searchParams.get("query");
+      return query ? decodeURIComponent(query) : undefined;
+    }
+
+    function getVariablesFromURL() {
+      const url = new URL(window.location.href);
+      const query = url.searchParams.get("variables");
+      return query ? decodeURIComponent(query) : undefined;
+    }
+
+    const DEFAULT_QUERY = 'query ActiveUser { me { id email } }'
+
+    const root = ReactDOM.createRoot(document.getElementById('graphiql'))
+    root.render(
+      React.createElement(GraphiQL, {
+        fetcher: GraphiQL.createFetcher({
+          url: '/graphql',
         }),
-      )
-    </script>
-  </body>
+        defaultEditorToolsVisibility: true,
+        defaultQuery: getQueryFromURL() || DEFAULT_QUERY,
+        query: getQueryFromURL() || DEFAULT_QUERY,
+        variables: getVariablesFromURL(),
+        onEditQuery(query) {
+          if (query && query !== DEFAULT_QUERY) {
+            const url = new URL(window.location.href);
+            url.searchParams.set("query", query);
+            window.history.replaceState({}, "", url.toString());
+            return url.toString();
+          }
+        },
+        onEditVariables(variables) {
+          if (variables && variables !== DEFAULT_QUERY) {
+            const url = new URL(window.location.href);
+            url.searchParams.set("variables", variables);
+            window.history.replaceState({}, "", url.toString());
+            return url.toString();
+          }
+        },
+      }),
+    )
+  </script>
+</body>
+
 </html>
